tests/models/enum/unnamed/u32/pass/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(ge = 2)]
        u32
    ),
}
fn main() {}
